--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/unnamed.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-ts-app</title>
+    <title>CoffeEScan AI</title>
   </head>
   <body>
     <div id="root"></div>
